Refactored to allow use in python and not just terminal'

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,7 @@ requires = [
     "setuptools >= 35.0.2",
     "setuptools_scm >= 2.0.0, <3"
 ]
+
+[tool.black]
+line-length = 120
+target-version = ['py37', 'py38']
