--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,18 +5,21 @@ version = "0.1.0"
 authors = [
     { name = "Casey Compton", email = "ccompton42@gmail.com" }
 ]
-license = {file = "LICENSE.txt"}
+license = {file = "LICENSE"}
 readme = "README.md"
-requires-python = ">=3.6"
+requires-python = ">=3.9"
 
 [project.scripts]
-checksum = "checksum"
+checksum = "cli:main"
 
 [build-system]
 requires = [
     "setuptools >= 35.0.2",
     "setuptools_scm >= 2.0.0, <3"
 ]
+
+[tool.setuptools.packages]
+find = {}  # Scanning implicit namespaces is active by default
 
 [tool.black]
 line-length = 120
